/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.1.0/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // This dependency is used by the application.
    implementation(libs.guava)
    compileOnly("org.jetbrains:annotations:26.0.2-1")

    implementation("com.fasterxml.jackson.core:jackson-databind:2.20.1")
    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.20.1")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.1")
}

version = "0.0.0"


// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    // Define the main class for the application.
    mainClass = "net.aeternum.lolwrcalc.Main"
}

tasks {
    jar {
        manifest {
            attributes["Main-Class"] = "net.aeternum.lolwrcalc.Main"
        }

        val dependencies = configurations
            .runtimeClasspath
            .get()
            .map(::zipTree)

        from(dependencies)
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
}

